--- a/ammunitionBuy.html
+++ b/ammunitionBuy.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <script src="imageCreator.js"></script>
+        <script src="playerStatsAmmo.js"></script>
+        <script src="playerStatsSecondaryWeapon.js"></script>
+        <script src="playerStatsWeapons.js"></script>
         <script src="playerStats.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
         <link rel="stylesheet" href="styles.css">
@@ -23,7 +26,7 @@
 <script type="text/javascript">
     var selectedAmmoToBuyIndex = 0
 
-    var ammos = PlayerStats.getBuyableAmmunition()
+    var ammos = PlayerStats.Ammo.getBuyable()
     var ammoIds = []
 
     for (var ammo of ammos)
@@ -46,11 +49,11 @@
     }
 
     document.getElementById("buyAmmo").onclick = function() {
-        var ammos = PlayerStats.getBuyableAmmunition()
+        var ammos = PlayerStats.Ammo.getBuyable()
         var ammo = ammos[selectedAmmoToBuyIndex]
         if (PlayerStats.debitMoney(ammo.price))
         {
-            PlayerStats.addAmmo(ammo.index)
+            PlayerStats.Ammo.add(ammo.index)
         }
         update()
     }
