--- a/game.html
+++ b/game.html
@@ -22,6 +22,9 @@
     <script src="phaser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.2/dist/phaser-raycaster.min.js"></script>
     <script src="player.js"></script>
+    <script src="playerStatsAmmo.js"></script>
+    <script src="playerStatsSecondaryWeapon.js"></script>
+    <script src="playerStatsWeapons.js"></script>
     <script src="playerStats.js"></script>
     <script src="statusScene.js"></script>
     <script src="tanxScene.js"></script>
