--- a/weaponBuy.html
+++ b/weaponBuy.html
@@ -7,6 +7,9 @@
         <script src="gun.js"></script>
         <script src="rearGun.js"></script>
         <script src="spreadGun.js"></script>
+        <script src="playerStatsAmmo.js"></script>
+        <script src="playerStatsSecondaryWeapon.js"></script>
+        <script src="playerStatsWeapons.js"></script>
         <script src="playerStats.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
         <link rel="stylesheet" href="styles.css">
@@ -29,7 +32,7 @@
 
     var selectedWeaponToBuyIndex = 0
 
-    var weapons = PlayerStats.getBuyableWeapons()
+    var weapons = PlayerStats.Weapons.getBuyable()
     var weaponIds = []
 
     for (var weapon of weapons)
@@ -52,11 +55,11 @@
     }
 
     document.getElementById("buyWeapon").onclick = function() {
-        var weapons = PlayerStats.getBuyableWeapons()
+        var weapons = PlayerStats.Weapons.getBuyable()
         var weapon = weapons[selectedWeaponToBuyIndex]
         if (PlayerStats.debitMoney(weapon.price))
         {
-            PlayerStats.addWeapon(weapon.name)
+            PlayerStats.Weapons.add(weapon.name)
         }
         update()
     }
