PlaceDefense introduced ground cannon as defense weapon that can be placed by the player; introduced different playerStat classes for data handling

--- a/ammunitionBuy.html
+++ b/ammunitionBuy.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <script src="imageCreator.js"></script>
+        <script src="playerStatsDefenseSystem.js"></script>
         <script src="playerStatsAmmo.js"></script>
         <script src="playerStatsSecondaryWeapon.js"></script>
         <script src="playerStatsWeapons.js"></script>
