--- a/buy.html
+++ b/buy.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <script src="playerStatsDefenseSystem.js"></script>
         <script src="playerStatsAmmo.js"></script>
         <script src="playerStatsSecondaryWeapon.js"></script>
         <script src="playerStatsWeapons.js"></script>
