--- a/mountWeapon.html
+++ b/mountWeapon.html
@@ -5,6 +5,7 @@
         <script src="imageCreator.js"></script>
         <script src="weapon.js"></script>
         <script src="gun.js"></script>
+        <script src="playerStatsDefenseSystem.js"></script>
         <script src="playerStatsAmmo.js"></script>
         <script src="playerStatsSecondaryWeapon.js"></script>
         <script src="playerStatsWeapons.js"></script>
