--- a/secondaryWeaponBuy.html
+++ b/secondaryWeaponBuy.html
@@ -6,6 +6,7 @@
         <script src="weapon.js"></script>
         <script src="bombCarrier.js"></script>
         <script src="minelayer.js"></script>
+        <script src="playerStatsDefenseSystem.js"></script>
         <script src="playerStatsAmmo.js"></script>
         <script src="playerStatsSecondaryWeapon.js"></script>
         <script src="playerStatsWeapons.js"></script>
