--- a/defenseEquipmentBuy.html
+++ b/defenseEquipmentBuy.html
@@ -3,26 +3,24 @@
     <head>
         <meta charset="UTF-8" />
         <script src="imageCreator.js"></script>
-        <script src="weapon.js"></script>
-        <script src="gun.js"></script>
-        <script src="rearGun.js"></script>
-        <script src="spreadGun.js"></script>
         <script src="playerStatsDefenseSystem.js"></script>
         <script src="playerStatsAmmo.js"></script>
         <script src="playerStatsSecondaryWeapon.js"></script>
         <script src="playerStatsWeapons.js"></script>
         <script src="playerStats.js"></script>
+        <script src="groundCannon.js"></script>
+        <script src="weapon.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="mainDivContent">
-            <h3>Buy new weapon systems</h3>
+            <h3>Buy defense systems</h3>
             <label id="moneyLabel"></label>
             <div class="btn-group">
                 <div id="shopImages" class="row">
                 </div>
-                <button id="buyWeapon" type="button" class=btn disabled>Buy</button>
+                <button id="buySystem" type="button" class=btn disabled>Buy</button>
                 <button id="backButton" type="button" class=btn>Back</button>
             </div>
         </div>
@@ -33,34 +31,34 @@
 
     var selectedWeaponToBuyIndex = 0
 
-    var weapons = PlayerStats.Weapons.getBuyable()
+    var weapons = PlayerStats.Defense.getBuyable()
     var weaponIds = []
 
     for (var weapon of weapons)
     {
         var image = createImageWithText("shopImages", weapon.shopImage, weapon.index, weapon.price + "€")
-
         image.onclick = (event) => {
             selectedWeaponToBuyIndex = weaponIds[event.srcElement.id]
+
             var weaponImages = document.getElementsByTagName("column")
             for (i = 0; i < weaponImages.length; i++) {
                 weaponImages[i].className = "column"
             }
             weaponImages[parseInt(selectedWeaponToBuyIndex)].className = "activeColumn"
 
-            var buyButton = document.getElementById("buyWeapon")
+            var buyButton = document.getElementById("buySystem")
             buyButton.disabled = false
         }
 
         weaponIds.push(weapon.index)
     }
 
-    document.getElementById("buyWeapon").onclick = function() {
-        var weapons = PlayerStats.Weapons.getBuyable()
+    document.getElementById("buySystem").onclick = function() {
+        var weapons = PlayerStats.Defense.getBuyable()
         var weapon = weapons[selectedWeaponToBuyIndex]
         if (PlayerStats.debitMoney(weapon.price))
         {
-            PlayerStats.Weapons.add(weapon.name)
+            PlayerStats.Defense.add(weapon)
         }
         update()
     }
