--- a/game.html
+++ b/game.html
@@ -21,7 +21,9 @@
     <script src="spreadGun.js"></script>
     <script src="phaser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.2/dist/phaser-raycaster.min.js"></script>
+    <script src="groundCannon.js"></script>
     <script src="player.js"></script>
+    <script src="playerStatsDefenseSystem.js"></script>
     <script src="playerStatsAmmo.js"></script>
     <script src="playerStatsSecondaryWeapon.js"></script>
     <script src="playerStatsWeapons.js"></script>
