--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script src="weapon.js"></script>
     <script src="gun.js"></script>
+    <script src="playerStatsDefenseSystem.js"></script>
     <script src="playerStatsAmmo.js"></script>
     <script src="playerStatsSecondaryWeapon.js"></script>
     <script src="playerStatsWeapons.js"></script>
