--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="playerStatsDefenseSystem.js"></script>
 <script src="playerStatsAmmo.js"></script>
 <script src="playerStatsSecondaryWeapon.js"></script>
 <script src="playerStatsWeapons.js"></script>
