--- a/game.html
+++ b/game.html
@@ -4,13 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tanx2 - Return of the XGreen Tanx</title>
+    <script src="imageCreator.js"></script>
     <script src="combatant.js"></script>
     <script src="hq.js"></script>
+    <script src="rayCasting.js"></script>
     <script src="enemy.js"></script>
+    <script src="enemyBarracks.js"></script>
     <script src="enemyFollow.js"></script> 
+    <script src="enemyWatch.js"></script> 
     <script src="enemyWayPoint.js"></script> 
     <script src="weapon.js"></script>
     <script src="gun.js"></script>
+    <script src="bombCarrier.js"></script>
+    <script src="minelayer.js"></script>
     <script src="rearGun.js"></script>
     <script src="spreadGun.js"></script>
     <script src="phaser.min.js"></script>
