--- a/mountWeapon.html
+++ b/mountWeapon.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <script src="imageCreator.js"></script>
         <script src="weapon.js"></script>
         <script src="gun.js"></script>
         <script src="playerStats.js"></script>
@@ -9,35 +10,59 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h3>Buy new weapon systems</h3>
-        <div class="btn-group">
-          <div id="shopImages" class="row">
-          </div>
-          <button id="backButton" type="button" class=btn>Back</button>
+        <div class="mainDivContent">
+            <h3>Mount weapon systems to tank</h3>
+            <div class="btn-group">
+            <div id="weaponShopImages" class="row"></div>
+            <div id="secondaryWeaponShopImages" class="row"></div>
+            <button id="backButton" type="button" class=btn>Back</button>
+            </div>
         </div>
     </body>
 </html>
 
 <script type="text/javascript">
 
-    var selectedWeaponToBuyIndex = 0
+    var mounterWeaponIndex = PlayerStats.getMountedPrimaryWeaponIndex()
 
     var weapons = PlayerStats.getAllWeaponsOwnedByPlayer()
 
     for (var weapon of weapons)
     {
-        var image = document.createElement("img")
-        image.setAttribute("src", weapon.shopImage)
-        image.setAttribute("id", weapon.index)
+        var image = createImageWithActivatedState("weaponShopImages", weapon.shopImage, weapon.index, weapon.index == mounterWeaponIndex)
         image.onclick = (event) => {
-            PlayerStats.setMountedPrimaryWeaponIndex(event.srcElement.id)
+            var index = event.srcElement.id
+            PlayerStats.setMountedPrimaryWeaponIndex(index)
+
+            var weaponImagesDiv = document.getElementById("weaponShopImages")
+            var weaponImages = weaponImagesDiv.getElementsByTagName("column")
+            for (i = 0; i < weaponImages.length; i++) 
+            {
+                weaponImages[i].className = "column"
+            }
+            weaponImages[index].className = "activeColumn"
         }
+    }
 
-        var column = document.createElement("column")
-        column.setAttribute("class", "column")
-        column.appendChild(image)
+    var secondaryWeapons = PlayerStats.getAllSecondaryWeaponsOwnedByPlayer()
+    var mountedSecondaryWeaponIndex = PlayerStats.getMountedSecondaryWeaponIndex()
 
-        document.getElementById("shopImages").appendChild(column)
+    for (weapon of secondaryWeapons)
+    {
+        var image = createImageWithActivatedState("secondaryWeaponShopImages", weapon.shopImage, weapon.index, weapon.index == mounterWeaponIndex)
+
+        image.onclick = (event) => {
+            var index = event.srcElement.id
+            PlayerStats.setMountedSecondaryWeaponIndex(index)
+
+            var secondaryWeaponImagesDiv = document.getElementById("secondaryWeaponShopImages")
+            var secondaryWeaponImages = secondaryWeaponImagesDiv.getElementsByTagName("column")
+            for (i = 0; i < secondaryWeaponImages.length; i++) 
+            {
+                secondaryWeaponImages[i].className = "column"
+            }
+            secondaryWeaponImages[index].className = "activeColumn"
+        }
     }
 
     document.getElementById("backButton").onclick = function() {
